# physics-simulations

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
.github/workflows/: release.yml
include/app/: Application.hpp  Constants.hpp  Types.hpp
include/common/: Application.hpp  Constants.hpp  Context.hpp  Dimensions.hpp  Types.hpp  Vector3.hpp
include/core/: Camera2D.hpp  Field.hpp  Particle.hpp
include/engine/: Camera2D.hpp  Camera3D.hpp  Ray.hpp  ShaderProgram.hpp  TextureManager.hpp
include/physics/: Field.hpp  ForceFunctions.hpp  Motion.hpp  Particle.hpp
include/simulation/: ForceFunctions.hpp  Motion.hpp
include/system/: ImGuiLayer.hpp  InputManager.hpp
include/ui/: ImGuiLayer.hpp  InputManager.hpp
shaders/: particle.frag  shadow_depth.vert
src/app/: Application.cpp
src/common/: Application.cpp  Vector3.cpp
src/core/: Camera2D.cpp  Field.cpp  Particle.cpp
src/engine/: Camera2D.cpp  Camera3D.cpp  ShaderProgram.cpp  TextureManager.cpp
src/physics/: Field.cpp  Motion.cpp  Particle.cpp
src/simulation/: Motion.cpp
src/system/: ImGuiLayer.cpp  InputManager.cpp
src/ui/: ImGuiLayer.cpp  InputManager.cpp
